syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "attribute_expression.proto";

message ProductOrderPriorityRuleInfo {
	//ID 
 	string id=3;
	//优先级 
 	int32 priority=4;
	//生产优先级 
 	int32 priorityLevel=5;
	//是否启用 
 	bool enable=6;
	//默认排序 
 	bool initialValue=7;
	//备注 
 	string remark=8;
    //特征表达式 
 	repeated AttributeExpressionInfo attributeExpressions=2;
}

message QueryProductOrderPriorityRuleRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//生产优先级 
    // @inject_tag: uri:"priorityLevel" form:"priorityLevel"
    int32 priorityLevel=6;
}

message QueryProductOrderPriorityRuleResponse{
    Code code=1;
    string message=2;
    repeated ProductOrderPriorityRuleInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductOrderPriorityRuleResponse{
    Code code=1;
    string message=2;
    repeated ProductOrderPriorityRuleInfo data=3;
}

message GetProductOrderPriorityRuleDetailResponse{
    Code code=1;
    string message=2;
    ProductOrderPriorityRuleInfo data=3;
}